--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
+    "i18next": "^19.9.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-jitsi": "^1.0.4",
+    "react-i18next": "^11.8.10",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-webcam": "^5.2.3",
+    "socket.io-client": "^4.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
