--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 services:
     tingtong_web_student:
-        image: registry.gitlab.com/online-learning-hcmus/client/tingtong
+        image: registry.gitlab.com/online-learning-hcmus/client/tingtong:staging
         container_name: tingtong_web_student
         restart: always
         ports:
-            - "5300:3000"
+            - "80:3000"
 
 networks:
     default:
