--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-avatar-edit": "^1.0.0",
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.3.5",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
+    "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
