--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-star-ratings": "^2.3.0",
     "react-webcam": "^5.2.3",
     "socket.io-client": "^2.4.0",
