--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_BASE_URL=https://api.tingtong.xyz
+REACT_APP_BASE_URL=http://localhost
 REACT_APP_PORT=5000
 REACT_APP_BASE_URL_CDN=https://cdn.tingtong.xyz
 REACT_APP_BASE_URL_SOCKET=socket.tingtong.xyz
-PORT=3000
+PORT=3001
