--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
+    "firebase": "^7.16.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-avatar-edit": "^1.0.0",
@@ -20,6 +21,7 @@
     "react-facebook-login": "^4.1.1",
     "react-hook-form": "^7.3.5",
     "react-modal": "^3.12.1",
+    "react-pdf": "^5.3.0",
     "react-redux": "^7.2.2",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.2.0",
@@ -29,8 +31,7 @@
     "react-webcam": "^5.2.3",
     "socket.io-client": "^2.4.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0",
-    "firebase": "^7.16.1"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
