--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.0",
     "axios": "^0.21.1",
     "firebase": "^7.16.1",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-avatar-edit": "^1.0.0",
@@ -28,6 +29,7 @@
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^7.0.4",
     "react-webcam": "^5.2.3",
     "socket.io-client": "^2.4.0",
     "styled-components": "^5.2.1",
