--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-webcam": "^5.2.3",
     "socket.io-client": "^2.4.0",
     "styled-components": "^5.2.1",
+    "sweetalert2": "^11.0.18",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
