--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ REACT_APP_PORT=5000
 REACT_APP_BASE_URL_CDN=https://cdn.tingtong.xyz
 REACT_APP_BASE_URL_SOCKET=socket.tingtong.xyz
 REACT_APP_BASE_URL_WINDOW_CALL=http://localhost:3000
+REACT_APP_CLIENT_ID=1066624920333-vuh0d2uf8mg3ht53urf21rq21366liq4.apps.googleusercontent.com
 PORT=3000
