--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.3.5",
     "react-modal": "^3.12.1",
     "react-pdf": "^5.3.0",
